Flex fixed, need size correction to align with large card on desktop view

--- a/Project_1/Code/src/styles/components/cards/_story-small.scss
+++ b/Project_1/Code/src/styles/components/cards/_story-small.scss
@@ -16,6 +16,10 @@
     position: relative;
     width: 100%;
 
+    @include respond-to($breakpoint-desktop) {
+      height: 210px;
+    }
+
     img {
       height: 100%;
       object-fit: cover;
